update seo and content

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
       content="Master Git and GitHub for version control, collaborative development, and professional software engineering workflows."
     />
     <meta name="theme-color" content="#2563eb" />
-    <title>Git & GitHub | Version Control & Collaborative Development</title>
+    <title>Git & GitHub Complete Docs</title>
   </head>
   <body>
     <div id="root"></div>
